# Cerebrum

./: LICENSE  README.md  pyproject.toml  requirements.txt  test.py
.github/workflows/: python-package-conda.yml  test.yml
benchmarks/: experiment_core.py  utils.py
benchmarks/agents/: pure_llm.py  react.py
benchmarks/agents/react/: calculator.py  code_execution_worker.py  react.py  web_search_worker.py
benchmarks/gaia/: inference.py  run_evaluation.py  run_exp.sh
benchmarks/humaneval/: inference.py  run_exp.sh
benchmarks/swebench/: inference.py  run_exp.sh
cerebrum/: __init__.py  apis.py  download_agent.py  run_agent.py  script.sh  test_apis.py  upload_agent.py
cerebrum/agents/: base.py
cerebrum/client/: __init__.py
cerebrum/commands/: list_agenthub_agents.py  list_local_tools.py  list_toolhub_tools.py  upload_tool.py
cerebrum/community/adapter/: adapter.py  autogen_adapter.py  interpreter_adapter.py  metagpt_adapter.py
cerebrum/config/: config_manager.py  default.yaml
cerebrum/example/: aios_demo.py  aios_demo_concurrent.py  local_tool_load_demo.py  run_agent.py  run_agent.sh  upload_agent_demo.py  upload_tool_demo.py
cerebrum/example/agents/academic_agent/: agent.py  config.json
cerebrum/example/agents/autogen_demo_agent/: agent.py  config.json
cerebrum/example/agents/browser_use_agent/: agent.py
cerebrum/example/agents/cocktail_mixlogist/: agent.py  config.json
cerebrum/example/agents/creation_agent/: agent.py  config.json
cerebrum/example/agents/cu_agent/: cuagent_mcp.py
cerebrum/example/agents/demo_agent/: agent.py  config.json
cerebrum/example/agents/festival_card_designer/: agent.py  config.json
cerebrum/example/agents/interpreter_demo_agent/: agent.py
cerebrum/example/agents/language_tutor/: agent.py  config.json
cerebrum/example/agents/logo_creator/: agent.py  config.json
cerebrum/example/agents/math_agent/: agent.py  config.json
cerebrum/example/agents/mcp_browser_use/: agent.py
cerebrum/example/agents/meme_creator/: agent.py  config.json
cerebrum/example/agents/metagpt_demo_agent/: agent.py
cerebrum/example/agents/music_composer/: agent.py  config.json
cerebrum/example/agents/react/: react.py
cerebrum/example/agents/story_teller/: agent.py  config.json
cerebrum/example/agents/tech_support_agent/: agent.py  config.json
cerebrum/example/agents/test_agent/: agent.py  config.json
cerebrum/example/tools/arxiv/: config.json  tool.py
cerebrum/example/tools/image_to_image/: config.json
cerebrum/example/tools/speech_to_text/: config.json
cerebrum/example/tools/text_to_image/: config.json
cerebrum/example/tools/text_to_speech/: config.json
cerebrum/example/tools/wikipedia/: config.json  tool.py
cerebrum/interface/: __init__.py
cerebrum/llm/: apis.py  communication.py  layer.py
cerebrum/manager/: agent.py  tool.py
cerebrum/memory/: apis.py  test_apis.py
cerebrum/runtime/: process.py
cerebrum/storage/: apis.py  communication.py
cerebrum/tool/: apis.py
cerebrum/tool/core/: registry.py
cerebrum/tool/mcp_tool/: __init__.py  mcp_client.py  type.py
cerebrum/utils/: communication.py
example/: example  local_agent_load_demo.py
example/academic_agent/: agent.py
example/agents/academic_agent/: agent.py  config.json
example/tools/arxiv/: arxiv.py  config.json  tool.py
interface/: __init__.py
manager/: tool.py
tests/agents/run-single-agent/: test_ollama.py
tests/apis/llm/: test_ollama.py
