[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-requirements-txt"]

[project]
dynamic = ["dependencies"]
description = "Cerebrum: Agent SDK for AIOS"
keywords = ["llm", "agi", "cerebrum", "os", "aios"]
license = {file = "LICENSE"}
name = "aios-agent-sdk"
readme = "README.md"
requires-python = ">=3.10,<3.12"
version = "0.0.3"

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/agiresearch/Cerebrum"
Repository = "https://github.com/agiresearch/Cerebrum.git"

[tool.hatch.build]
include = ["cerebrum", "example"]
exclude = [
    "*.egg-info/",
    "dist",
    "__pycache__/",
    ".pytest_cache/",
    "example/",
    "example/**",
]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[project.scripts]
run-agent = "cerebrum.run_agent:main"
download-agent = "cerebrum.download_agent:main"
upload-agent = "cerebrum.upload_agent:main"

[tool.hatch.build.targets.wheel]
packages = ["cerebrum"]
only-include = ["cerebrum"]
